began Q implementation; fixed canvas alignment

--- a/main.css
+++ b/main.css
@@ -40,7 +40,6 @@ header {
 
 main {
 	margin: 0 auto;
-	max-width: 60em;
 	padding: 1em;
 	border-radius: .5em;
 }
